--- a/frontend.html
+++ b/frontend.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Voting Form</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" src="styles.css" />
 </head>
 <body>
   <h1>Voting Form</h1>
